--- a/main.html
+++ b/main.html
@@ -1,16 +1,32 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+.star{
+	position: relative;
+	width: 0;
+    height: 0;
+    border-left: 50px solid rgba(0, 0, 0, 0);
+    border-right: 50px solid rgba(0, 0, 0, 0);
+    border-bottom: 100px solid rgb(255, 255, 0);
+}
+.star > div {
+	position: absolute;
+    width: 0;
+    height: 0;
+	left: -48px;
+	top: 34px;
+    border-left: 50px solid rgba(0, 0, 0, 0);
+    border-right: 50px solid rgba(0, 0, 0, 0);
+    border-top: 100px solid rgb(255, 255, 0);
+}
+</style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<div class="star">
+		<div></div>
+	</div>
 
 </body>
-
-</html>
+</html> 
